fix scroll overflow-y on html&&body

--- a/app/assets/stylesheets/global/main.scss
+++ b/app/assets/stylesheets/global/main.scss
@@ -10,7 +10,6 @@ html,body {
   bottom: 0;
   right: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 #content {
   position: relative;
